# raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  shading.cpp  shading.h
src/color/: color.h
src/cuda/: cuda.h  cudamain.cu
src/geometries/: geometry.cpp  geometry.h
src/materials/: bitmap.cpp  bitmap.h
src/maths/: matrix.cpp  matrix.h  ray.cpp  ray.h  vector.h
src/render/: sdl.cpp  sdl.h
src/scenes/: camera.cpp  camera.h
src/shaders/: shading.cpp  shading.h
src/utils/: constants.h  util.cpp  util.h
